# numpy_exercises

./: .gitignore  100_Numpy_exercises.ipynb  pyproject.toml
ml_implemented/: collaborative_filtering.py  decision_tree.py  kmeans.py  knn.py  linear_regression.py  logistic_regression.py  naive_bayes.py  neural_network.py  random_forest.py  test.py  test_linkedin.py  top_p_sampling_softmax.py  transformer.py
