[project]
name = "numpy-100"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "jax>=0.8.2",
    "jaxtyping>=0.3.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
]
